clang/test/BSC/Negative/Trait/GenericTrait/define_trait_var1/define_trait_var1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {}G; // expected-error {{expected ';' after trait}}
                // expected-error@-1 {{a type specifier is required for all declarations}}